PageDeployement fixed (probably)

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,10 @@ name: Deploy to GitHub Pages
 on:
   push:
     branches:
-      - aesthetixxx # Set a branch name to trigger deployment
+      - main # Set a branch name to trigger deployment
+
+permissions:
+  contents: write
 
 jobs:
   deploy:
@@ -13,10 +16,19 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 18
-      - run: npm ci
-      - run: npm run build
+      - name: Install dependencies
+        run: npm ci
+      - name: Build
+        run: npm run build
+      - name: Debug - List build output
+        run: ls -R dist
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
-          personal_token: ${{ secrets.DEPLOY_TOKEN }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./dist
+      - name: Debug - Check gh-pages branch
+        run: |
+          git fetch origin gh-pages
+          git checkout gh-pages
+          ls -la
